--- a/WhatShoudIEat/MealTypeView.xib
+++ b/WhatShoudIEat/MealTypeView.xib
@@ -1,18 +1,67 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MealTypeView" customModule="WhatShoudIEat" customModuleProvider="target">
+            <connections>
+                <outlet property="mealTypeButton" destination="g0l-zN-rBt" id="ma0-tR-Zm1"/>
+                <outlet property="mealTypeImage" destination="bM7-JX-9Zz" id="dYN-Hd-64H"/>
+                <outlet property="mealTypeLabel" destination="35q-zh-3nY" id="HY4-Uq-5AF"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="490" height="281"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bM7-JX-9Zz">
+                    <rect key="frame" x="73.666666666666657" y="16" width="400.33333333333337" height="249"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="50"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="35q-zh-3nY">
+                    <rect key="frame" x="15.999999999999996" y="131" width="41.666666666666657" height="19.333333333333343"/>
+                    <attributedString key="attributedText">
+                        <fragment content="Label">
+                            <attributes>
+                                <font key="NSFont" size="17" name=".AppleSystemUIFont"/>
+                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                            </attributes>
+                        </fragment>
+                    </attributedString>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g0l-zN-rBt">
+                    <rect key="frame" x="73.666666666666657" y="16" width="400.33333333333337" height="249"/>
+                </button>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="g0l-zN-rBt" firstAttribute="bottom" secondItem="bM7-JX-9Zz" secondAttribute="bottom" id="6Se-yi-DxU"/>
+                <constraint firstItem="g0l-zN-rBt" firstAttribute="leading" secondItem="bM7-JX-9Zz" secondAttribute="leading" id="OTH-Vh-o67"/>
+                <constraint firstItem="35q-zh-3nY" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="QuT-eV-WM8"/>
+                <constraint firstItem="bM7-JX-9Zz" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="16" id="Wc6-vr-HBm"/>
+                <constraint firstItem="g0l-zN-rBt" firstAttribute="trailing" secondItem="bM7-JX-9Zz" secondAttribute="trailing" id="crr-J5-ucV"/>
+                <constraint firstItem="g0l-zN-rBt" firstAttribute="top" secondItem="bM7-JX-9Zz" secondAttribute="top" id="gKx-YA-RVa"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="bM7-JX-9Zz" secondAttribute="trailing" constant="16" id="gc2-Pg-6RZ"/>
+                <constraint firstItem="bM7-JX-9Zz" firstAttribute="leading" secondItem="35q-zh-3nY" secondAttribute="trailing" constant="16" id="nf9-Cj-ozh"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="bM7-JX-9Zz" secondAttribute="bottom" constant="16" id="wnj-QH-EXV"/>
+                <constraint firstItem="35q-zh-3nY" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="zQR-Ot-v2F"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <point key="canvasLocation" x="192.75362318840581" y="-33.016304347826086"/>
         </view>
     </objects>
 </document>
